# Fluide_Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
blender_addon/: __init__.py  fe_operators.py  fe_panel.py
src/: CMakeLists.txt  animation.cpp  animation.hpp  apic_simulator.cpp  apic_simulator.hpp  array3.hpp  cuda_apic_simulator.cu  cuda_apic_simulator.hpp  cuda_flip_simulator.cu  cuda_flip_simulator.hpp  cuda_pic_simulator.cu  cuda_pic_simulator.hpp  flip_simulator.cpp  flip_simulator.hpp  fluid.hpp  fluid3.cpp  fluid3.hpp  grid_3d_simulator.hpp  hybrid_simulator.cpp  hybrid_simulator.hpp  main.cpp  particle_system.hpp  physics_animation.cpp  physics_animation.hpp  pic_simulator.cpp  pic_simulator.hpp  scalar_field3.hpp  simulation_runner.cpp  simulation_runner.hpp  simulation_stats.cpp  simulation_stats.hpp  test_hdr.hpp  vector3.hpp  vector_field3.hpp
src/3d/: bounding_box_3d.cpp  bounding_box_3d.hpp  collider.hpp  collider_collection.cpp  collider_collection.hpp  collisions.cpp  collisions.hpp  cuda_collisions.cu  cuda_collisions.hpp  marching_cubes_solver.cpp  marching_cubes_solver.hpp  mesh.cpp  mesh.hpp  mesh_2_sdf.cpp  mesh_2_sdf.hpp  mesh_file_manager.cpp  mesh_file_manager.hpp  mesh_signed_distance_field.cpp  mesh_signed_distance_field.hpp  obj_manager.cpp  obj_manager.hpp  scalar_grid3.cpp  scalar_grid3.hpp  scalar_grid3d.cpp  scalar_grid3d.hpp  surface_tracker.cpp  surface_tracker.hpp  triangle_3d.hpp  triangle_mesh.cpp  triangle_mesh.hpp  triangle_mesh_collider.cpp  triangle_mesh_collider.hpp
src/common/: array3.hpp  cuda_array_utils.cu  cuda_array_utils.hpp  frame.cpp  frame.hpp  grid3d.hpp  math_utils.hpp  object3.hpp  parallel_utils.hpp  scalar_field3.hpp  serializable.hpp  signed_distance_field.cpp  signed_distance_field.hpp  triangle_mesh.cpp  triangle_mesh.hpp  vector3.hpp  vector_field3.hpp
src/emmiter/: emmiter.cpp  emmiter.hpp  terminator.cpp  terminator.hpp  volume_emmiter.cpp  volume_emmiter.hpp  volume_terminator.hpp
src/file_systems/: file_system.cpp  file_system.hpp
src/fluid_solvers/: backward_euler_diffusion_solver.cpp  backward_euler_diffusion_solver.hpp  blocked_boundry_condition_solver.cpp  blocked_boundry_condition_solver.hpp  boundry_condition_solver.cpp  boundry_condition_solver.hpp  cuda_blocked_boundry_condition_solver.cu  cuda_blocked_boundry_condition_solver.hpp  diffusion_solver.cpp  diffusion_solver.hpp  forward_euler_diffusion_solver.cpp  forward_euler_diffusion_solver.hpp  pressure_solver.cpp  pressure_solver.hpp  single_phase_pressure_solver.cpp  single_phase_pressure_solver.hpp
src/forces/: directional_field.cpp  directional_field.hpp  external_force.cpp  external_force.hpp  point_field.cpp  point_field.hpp  scalar_field3.hpp  swirl_field.hpp  swirlf_field.cpp  vector_field3.hpp  volume_field.cpp  volume_field.hpp
src/grid_systems/: face_centered_grid3d.cpp  face_centered_grid3d.hpp  fluid_markers.cpp  fluid_markers.hpp  gird_3d_system.hpp  grid3d.hpp  grid_3d.hpp  grid_3d_system.cpp  scalar_grid3d.cpp  scalar_grid3d.hpp
src/linear_system/: blas.cpp  blas.hpp  conjugate_gradient_solver.cpp  conjugate_gradient_solver.hpp  cuda_blas.cu  cuda_blas.hpp  cuda_conjugate_gradient_solver.cu  cuda_conjugate_gradient_solver.hpp  cuda_jacobi_iteration_solver.cu  cuda_jacobi_iteration_solver.hpp  gause_seidel_solver.cpp  gause_seidel_solver.hpp  jacobi_iteration_solver.cpp  jacobi_iteration_solver.hpp  linear_system.cpp  linear_system.hpp  linear_system_solver.cpp  linear_system_solver.hpp
src/particle_systems/: hash_grid_particle_searcher.cpp  hash_grid_particle_searcher.hpp  particle_system.cpp  particle_system.hpp  particle_system_searcher.hpp
src/python_wrapper/: CmakeLists.txt  bounding_box_3d_wrapper.cpp  bounding_box_3d_wrapper.hpp  colliders_wrapper.cpp  colliders_wrapper.hpp  emitters_wrapper.cpp  emitters_wrapper.hpp  exteranl_forces_wrapper.cpp  external_forces_wrapper.hpp  frame_wrapper.cpp  frame_wrapper.hpp  main.cpp  obj_manager_wrapper.cpp  obj_manager_wrapper.hpp  pic_simulator_wrapper.cu  pic_simulator_wrapper.hpp  scalar_grid_3d_wrapper.cpp  scalar_grid_3d_wrapper.hpp  simulator_runner_wrapper.cpp  simulator_runner_wrapper.hpp  simulators_wrapper.cu  simulators_wrapper.hpp  triangle_mesh_wrapper.cpp  triangle_mesh_wrapper.hpp  vector3_wrapper.cpp  vector3_wrapper.hpp
src/solvers/: diffusion_solver.hpp  forward_euler_diffusion_solver.cpp  forward_euler_diffusion_solver.hpp  pressure_solver.cpp  pressure_solver.hpp
test/: CMakeLists.txt  array3_test.cpp  backward_euler_diffusion_solver_test.cpp  blas_test.cpp  bounding_box_test.cpp  collisions_test.cpp  cuda_array_utils_test.cu  cuda_blas_test.cu  directional_field.cpp  example_test.cpp  example_test_2.cpp  face_centered_grid3d_test.cpp  forward_euler_diffusion_solver_test.cpp  frame_test.cpp  hash_grid_particle_searcher_test.cpp  jacobi_iteration_solver_test.cpp  jacobi_iteration_solver_test.cu  marching_cubes_solver_test.cpp  math_utils_test.cpp  mesh_2_sdf_test.cpp  obj_manager_test.cpp  particle_system_test.cpp  physics_animation_test.cpp  pic_simulator_test.cpp  point_field_test.cpp  scalar_grid3d_test.cpp  single_phase_pressuer_solver_test.cpp  vector3_test.cpp
test/python_test/: main.py  python_example.py
test/test_cases/: test_balls.mtl
